# telegram-assistant

./: .cursorrules  .dockerignore  .editorconfig  .env.backup  .env.backup.20251025_011045  .env.example  .env.json  .env.recovered  .env.schema.json  .gitignore  .importlinter  .pre-commit-config.yaml  .secrets.baseline  .vulture-whitelist.py  Caddyfile  DEPLOYMENT_STATUS.md  FINAL_PROJECT_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_SUCCESS_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_COMPLETION_REPORT.md  README.md  README_CHANNEL_MANAGEMENT.md  SECURITY.md  SQL_REPROCESS_PENDING.md  TESTING_REPORT.md  TESTING_REPORT_VISION_S3.md  TESTING_SUMMARY.txt  backup_before_migration_20251024_234414.sql  docker-compose.dev.yml  docker-compose.paddleocr.yml  docker-compose.yml  env.example  package-lock.json  pyproject.toml  redis_state_snapshot_20251027_121600.txt  redis_state_snapshot_20251027_121613.txt  test_ownership_fix.sh  test_urls.py  (+2 more)
.cursor/: .cursorignore  .cursorindexingignore  mcp.json
api/: =3.0.0  Dockerfile  alembic.ini  config.py  crypto_utils.py  main.py  requirements.txt  sitecustomize.py  test_telegram_formatter.py  test_telegram_formatter_manual.md
artifacts/: CHANGELOG_E2E_FIXES_20251101.md  DIAGNOSIS_RESULTS_20251101.md  FINAL_REPORT_20251101.md  FIXES_APPLIED_20251101.md  FIXES_NEEDED_20251101.md  IMPLEMENTATION_SUMMARY_20251101.md  SUMMARY_20251101.md  adaptive_thresholds_implementation_summary.md  auto_subscription_issue.md  beer_channels_action_plan.md  breakingtrends_analysis.md  channel_analysis_report.md  channel_id_workaround.md  channel_subscription_analysis.md  channel_subscription_fix.md  channels_without_tg_id_recommendations.md  deployment_checklist_adaptive_thresholds.md  deployment_summary_adaptive_thresholds.md  digest_duplicate_analysis.md  digest_stuck_analysis.md  e2e_comprehensive_report_20251101.md  e2e_diagnostic_report.md  e2e_report_$(date +%Y%m%d_%H%M%S).md  e2e_report_20251028_231131.md  e2e_report_summary.md  e2e_result.json  e2e_result.xml  e2e_result2.json  e2e_result_20251029_001852.json  e2e_result_20251029_001852.xml  e2e_result_20251029_003044.json  e2e_result_20251029_003044.xml  e2e_result_20251029_003230.json  e2e_result_20251029_003230.xml  e2e_result_20251029_003315.json  e2e_result_20251029_003315.xml  e2e_result_20251101_191712.json  e2e_test_results_20251101_223202.md  e2e_test_results_20251101_223220.md  e2e_test_results_20251101_223259.md  (+9 more)
backups/: .gitkeep  README.md
caddy/: Caddyfile
config/: e2e_thresholds.json  slo_thresholds.json
crawl4ai/: Dockerfile  crawl4ai_service.py  enrichment_engine.py  health_server.py  main.py  policy_explainer.py  requirements.txt
docs/: ADR_GROUP_DIGESTS.md  ALBUM_ASSEMBLER_DEBUG.md  ALBUM_ASSEMBLER_DEPLOYMENT_FIX.md  ALBUM_DETECTION_LOGIC_ANALYSIS.md  ALBUM_DETECTION_LOGIC_FIX.md  ALBUM_INGESTION_TESTING_RESULTS.md  ALBUM_PIPELINE_ARCHITECTURE.md  ALBUM_PIPELINE_COMPLETE.md  ALBUM_PIPELINE_DEPLOYMENT.md  ALBUM_PIPELINE_FIXED.md  ALBUM_PIPELINE_INTEGRATION_COMPLETE.md  ALBUM_PIPELINE_READY.md  ALBUM_SAVING_FIX.md  ALBUM_SQL_FIX.md  ALBUM_VISION_S3_TESTING.md  ANTI_LOOP_MECHANISM.md  API_CONTRACTS.md  ARCHITECTURE_PRINCIPLES.md  ARCHIVE_DEPRECATED.md  AUDIT_RECOMMENDATIONS.md  AUDIT_REPORT_20251026.md  AUDIT_REPORT_VISION_S3_CRAWL4AI.md  BOT_COMMANDS_GUIDE.md  BOT_GROUP_DISCOVERY.md  BOT_VOICE_AND_QUESTIONS_GUIDE.md  BUDGET_GATE_INCREASE.md  CHANNELS_NOT_PARSING_FIX.md  CHANNEL_MANAGEMENT_GUIDE.md  CLEANUP_CHECKLIST.md  CLEANUP_COMPLETE.md  CLEANUP_INVENTORY.md  CLEANUP_QUICK_START.md  CLEANUP_REPORT_2025-02-01.md  CLEANUP_SUMMARY.md  CODE_QUALITY.md  CONTEXT7_BEST_PRACTICES.md  CRAWL4AI_CONTEXT7_REVIEW.md  DATABASE_SAVE_FAILED_SOLUTION.md  DATABASE_SCHEMA.md  DEPLOYMENT_CHECKLIST.md  (+162 more)
gpt2giga-proxy/: Dockerfile  disable_ssl.py  entrypoint.sh  fallback_proxy.py  run_gpt2giga.py  run_gpt2giga_patched.py  test_credentials.py  test_direct.py  test_fallback.py  test_gigachat.py
grafana/: alerts.yml  check_metrics.py  dashboards.yml  fix_dashboards.py  fix_dashboards_with_uid.py  prometheus-alerts.yml  qr_auth_funnel.json
legacy/: README.md
neo4j/: Dockerfile  health_server.py  requirements.txt
prometheus/: alerts.yml  prometheus.yml
scripts/: ALBUMS_AND_ENRICHMENT_FIX.md  ALL_ERRORS_FIXED.md  BUSINESS_RU_PARSING_FIX.md  Dockerfile.e2e  E2E_PIPELINE_CHECK_RESULTS.md  E2E_TEST_RESULTS.md  ENRICHMENT_FIX_COMPLETE.md  MONITORING_AND_DIAGNOSTICS.md  PARSING_STATUS_CHECK.md  PIPELINE_TESTING_STRATEGY.md  POST_ENRICHMENT_COMPLETE_FIX.md  POST_ENRICHMENT_FIELDS_ANALYSIS.md  QUICKSTART_E2E.md  SCHEDULER_FIX_LOCK_AND_TIMEOUT.md  TEST_EXECUTION_PLAN.md  TEST_RESULTS_AFTER_FIX.md  TEST_RESULTS_FIRST_RUN.md  apply_trend_agents_migration.sh  atomic_qr_session.lua  audit_prometheus_metrics.py  auth_truth_detector.py  backup_system.sh  (+140 more)
(+617 files in other folders)
